refactor: add @Transactional, method references, extract validateCommentBelongsToPost, fix entity ID comparison