@@ -7,15 +7,16 @@ import com.postpulse.repository.CategoryRepository;
 import com.postpulse.service.CategoryService;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@Transactional(readOnly = true)
 public class CategoryServiceImpl implements CategoryService {
 
-    private CategoryRepository categoryRepository;
-    private ModelMapper modelMapper;
+    private final CategoryRepository categoryRepository;
+    private final ModelMapper modelMapper;
 
     public CategoryServiceImpl(CategoryRepository categoryRepository,
                                ModelMapper modelMapper) {
@@ -24,12 +25,11 @@ public class CategoryServiceImpl implements CategoryService {
     }
 
     @Override
+    @Transactional
     public CategoryDto addCategory(CategoryDto categoryDto) {
-
         Category category = modelMapper.map(categoryDto, Category.class);
-        Category savedcategory = categoryRepository.save(category);
-
-        return modelMapper.map(savedcategory, CategoryDto.class);
+        Category savedCategory = categoryRepository.save(category);
+        return modelMapper.map(savedCategory, CategoryDto.class);
     }
 
     @Override
@@ -37,37 +37,34 @@ public class CategoryServiceImpl implements CategoryService {
         Category category = categoryRepository.findById(categoryId)
                 .orElseThrow(() -> new ResourceNotFoundException("Category", "id", categoryId));
         return modelMapper.map(category, CategoryDto.class);
-
     }
 
     @Override
     public List<CategoryDto> getAllCategories() {
-        List<Category> categories = categoryRepository.findAll();
-
-        return categories
+        return categoryRepository.findAll()
                 .stream()
                 .map(category -> modelMapper.map(category, CategoryDto.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Transactional
     public CategoryDto updateCategory(long categoryId, CategoryDto categoryDto) {
         Category category = categoryRepository.findById(categoryId)
                 .orElseThrow(() -> new ResourceNotFoundException("Category", "id", categoryId));
+
         category.setName(categoryDto.getName());
         category.setDescription(categoryDto.getDescription());
         category.setId(categoryId);
 
-        Category updatedCategory = categoryRepository.save(category);
-        return modelMapper.map(updatedCategory, CategoryDto.class);
+        return modelMapper.map(categoryRepository.save(category), CategoryDto.class);
     }
 
     @Override
+    @Transactional
     public void deleteCategory(long categoryId) {
-        Category category = categoryRepository
-                .findById(categoryId)
+        Category category = categoryRepository.findById(categoryId)
                 .orElseThrow(() -> new ResourceNotFoundException("Category", "id", categoryId));
-
         categoryRepository.delete(category);
     }
 }
